--- a/README.org
+++ b/README.org
@@ -9,7 +9,7 @@
 
 *** kb.py
 
-#+BEGIN_SRC python :tangle /media/${USER}/kb.py
+#+BEGIN_SRC python :tangle /media/kdm/CIRCUITPY/kb.py
 import board
 
 from kmk.kmk_keyboard import KMKKeyboard as _KMKKeyboard
@@ -36,9 +36,11 @@ class KMKKeyboard(_KMKKeyboard):
     ]
 #+END_SRC
 
+#+RESULTS:
+
 *** main.py
 
-#+BEGIN_SRC python :tangle /media/${USER}/main.py
+#+BEGIN_SRC python :tangle /media/kdm/CIRCUITPY/main.py
 from kb import KMKKeyboard
 from kmk.keys import KC
 from kmk.modules.layers import Layers
