--- a/README.org
+++ b/README.org
@@ -111,7 +111,7 @@ keyboard.keymap = [
     _______, _______, _______, _______, _______, _______,                      KC.MW_UP, _______, KC.UP,   _______, _______, _______, \
     _______, _______, _______, _______, _______, _______,                      KC.MW_DN, KC.LEFT, KC.DOWN, KC.RGHT, KC.MS_UP, _______, \
     _______, _______, KC.PGUP, KC.PGDN, _______, _______, _______,    _______, _______, _______, _______, KC.MS_LT, KC.MS_DN, KC.MS_RT, \
-                           _______, _______, _______, _______,             _______, _______, _______, _______,
+                           _______, _______, _______, _______,             _______, KC.MB_MMB, KC.MB_LMB, KC.MB_RMB,
 ],
     
 [ # 2: Num
